Refactor 1: Listening to input input and assign value to options works

--- a/src/app/search-input/search-input.component.html
+++ b/src/app/search-input/search-input.component.html
@@ -1,4 +1,4 @@
 <p>
-  <input (input)='null' type="text" #input>
-  <span *ngFor="let sug of filteredOptions(input)">{{sug | json}}</span>
+  <input (input)='filterOptions($event.target.value)' type="text">
+  <span *ngFor="let sug of options">{{sug | json}}</span>
 </p>
